python-apt (0.7.7) unstable; urgency=low

  * python/apt_pkgmodule.cc:
    - fix bug in hashsum calculation when the original string
      contains \0 charackters (thanks to Celso Providelo and 
      Ryan Hass for the test-case) LP: #243630

 -- Michael Vogt <mvo@debian.org>  Fri, 04 Jul 2008 19:53:28 +0200

python-apt (0.7.6) unstable; urgency=low

  * apt/cache.py:
    - add "memonly" option to apt.Cache() to force python-apt to
      not touch the pkgcache.bin file (this works around a possible
      race condition in the pkgcache.bin handling)
  * data/templates/Ubuntu.info.in:
    - added ubuntu 'intrepid'
  * debian/README.source: 
    - added (basic) documentation how to build python-apt
  * aptsources/distinfo.py:
    - support arch specific BaseURI, MatchURI and MirrosFile fields
      in the distinfo template
  * debian/control:
    - move bzr branch to bzr.debian.org and update Vcs-Bzr

 -- Michael Vogt <mvo@debian.org>  Wed, 18 Jun 2008 14:46:43 +0200

python-apt (0.7.5) unstable; urgency=low

  * use the new ListUpdate() code
  * add example in doc/examples/update.py
  * python/pkgrecords.cc:
    - export the Homepage field
  * python/tar.cc:
    - fix .lzma extraction (thanks to bigjools)
  * python/sourcelist.cc:
    - support GetIndexes() GetAll argument to implement
      something like --print-uris
  * python/apt_pkgmodule.cc:
    - add InstState{Ok,ReInstReq,Hold,HoldReInstReq} constants
  * apt/cache.py:
    - add reqReinstallPkgs property that lists all packages in
      ReInstReq or HoldReInstReq

 -- Michael Vogt <mvo@debian.org>  Tue, 19 Feb 2008 21:06:36 +0100

python-apt (0.7.4) unstable; urgency=low

  * apt/debfile.py:
    - added wrapper around apt_inst.debExtract()
    - support dictionary like access 
  * apt/package.py:
    - fix apt.package.Dependency.relation initialization
  * python/apt_instmodule.cc:
    - added arCheckMember()
    - fix typo
  * aptsources/distro.py: