@@ -4,6 +4,8 @@ python-apt (0.7.7) unstable; urgency=low
     - fix bug in hashsum calculation when the original string
       contains \0 charackters (thanks to Celso Providelo and 
       Ryan Hass for the test-case) LP: #243630
+  * tests/test_hashsums.py:
+    - add tests for the hashsum code
 
  -- Michael Vogt <mvo@debian.org>  Fri, 04 Jul 2008 19:53:28 +0200
 
